# rocket_avionics

./: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
components/common_utils/include/: utils_common.h
components/config/: CMakeLIsts.txt
components/core/: CMakeLists.txt
components/core/include/: command_params.h  command_router.h  command_types.h  conditions.h  event_dispatcher.h  event_types.h  state_manager.h  system_context.h  system_state.h  system_state_store.h
components/core/src/: command_router.c  conditions.c  event_dispatcher.c  state_manager.c  system_context.c  system_state.c
components/drivers/: CMakeLIsts.txt
components/drivers/actuators/relay_driver/: relay_driver.c  relay_driver.h
components/drivers/camera/camera_driver/: camera_driver.c  camera_driver.h
components/drivers/comm/mqtt/: mqtt_client_abstraction.c  mqtt_client_abstraction.h
components/drivers/comm/wifi/: wifi_driver_abstraction.c  wifi_driver_abstraction.h
components/services/: CMakeLIsts.txt
components/services/common/: service_interfaces.h  service_manager.c  service_manager.h
components/services/logging/: logging_service.c  logging_service.h
components/services/timer/: timer_service.c  timer_service.h
components/utils/: CMakeLIsts.txt
components/utils/include/: utils_common.h
main/: CMakeLists.txt  idf_component.yml  main.c
tests/: CMakeLists.txt
tests/include/: core_self_test.h  timer_service_test.h  ultrasonic_test.h  wifi_mqtt_test.h
tests/src/: core_self_test.c  timer_service_test.c  ultrasonic_test.c  wifi_mqtt_test.c
(+28 files in other folders)
